--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
         <div class="forms-box">
             <form>
-                <input class="input-default" type="text" placeholder="Name">
-                <input class="input-default large" type="email" placeholder="Email Address">
-                <input class="input-default" type="phone" placeholder="Telephone">
+                <input class="input-default" type="text" placeholder="Nome">
+                <input class="input-default large" type="email" placeholder="Email">
+                <input class="input-default" type="phone" placeholder="Telefone">
                 <button class="button-default">Enviar</button>
             </form>
         </div>
