--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                 <button class="button-default">Enviar</button>
             </form>
         </div>
+
+        <!--//Adaptado de: https://twitter.com/argyleink/status/1217213431947747328-->
     </div>
 </body>
 
